[package]
name = "aias-issuer"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-session = "0.4.1"
actix-rt = "1"
twilio = "1"
rand = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
actix-service = "2.0.0"
serde_json = "1"