[package]
name = "aias-issuer"
version = "0.1.0"
authors = ["akakou <akakou571@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-session = "0.4.1"
actix-rt = "1"
twilio = "1"
rand = "0.8.4"
actix-service = "2.0.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

log = "0.4"
fast_log="1.3"

rbatis = { version = "2" }

rmp-serde = "0.15.5"
base64 = "0.13.0"

[dependencies.distributed-bss]
git="https://github.com/pj-aias/distributed-bbs"
branch = "main"
